// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get jutsus 1`] = `
Array [
  Object {
    "description": "Por meio do poder do senjutsu, Kabuto é capaz de usar livremente as habilidades, talentos e kekkei genkai de outros ninjas cujo material genético está integrado dentro de si mesmo. Como alternativa, ele pode canalizar suas habilidades coletivas em respectivos clones irracionais de cada shinobi. Essas cópias são geradas em de seu umbigo de cobra.",
    "games": null,
    "handSeals": null,
    "id": 1,
    "kanji": "伝異遠影ディーエヌエー",
    "mangaPanini": null,
    "name": "ADN",
    "portugues": "ADN; DNA; Incompatível Herança Distante das Sombras",
    "range": null,
    "rank": "Rank –",
    "romaji": "Dīenuē",
    "tvBrasileira": null,
  },
  Object {
    "description": "Hashirama, Tobirama e Hiruzen usam uma combinação de madeira, fogo e água para empurrar o oponente. Hashirama usa sua Técnica Secreta da Liberação de Madeira: Natividade de um Mundo de Árvores para criar uma grande floresta em que Tobirama e Hiruzen atacam o oponente usando uma combinação de fogo e água. Os três Hokage então atacam o oponente, após Hashirama usar o Punho Adamantino, Tobirama chuta o oponente e Hiruzen invoca Enma que então ataca o oponente com o bastão adamantino. A força do ataque é tanta que cria uma explosão gigante na floresta no processo da conclusão da técnica.",
    "games": null,
    "handSeals": null,
    "id": 2,
    "kanji": "受け継がれる火の意志うけつがれるひのいし",
    "mangaPanini": null,
    "name": "A Herança da Vontade do Fogo",
    "portugues": "A Herança da Vontade do Fogo",
    "range": "Curto a Médio alcance",
    "rank": null,
    "romaji": "Uketsugareru Hi no Ishi",
    "tvBrasileira": null,
  },
  Object {
    "description": "Tenten invoca uma ferramenta do tamanho de seu oponente para atacá-lo.",
    "games": "Queda Dupla da Haste de Ouro",
    "handSeals": null,
    "id": 3,
    "kanji": "双金棒打ち落とし",
    "mangaPanini": null,
    "name": "Abate Duplo das Varetas de Metal",
    "portugues": "Abate Duplo das Varetas de Metal",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Sōkanabō Uchiotoshi",
    "tvBrasileira": null,
  },
  Object {
    "description": "Obito demarca a área de ataque com suas Esferas da Busca da Verdade, então ele cria várias lanças que o perfuram e em seguida ele cria uma erupção de energia que joga seu oponente para o alto.",
    "games": null,
    "handSeals": null,
    "id": 4,
    "kanji": "穿蜂",
    "mangaPanini": null,
    "name": "Abelha Perfurante",
    "portugues": "Abelha Perfurante",
    "range": "Curto a Médio alcance",
    "rank": null,
    "romaji": "Ugachibachi",
    "tvBrasileira": null,
  },
  Object {
    "description": "Depois de ser invocado por Orochimaru, Manda desliza em direção ao oponente, em seguida, submerge e atravessa-o.",
    "games": "Gongo da Boca do Mau",
    "handSeals": null,
    "id": 5,
    "kanji": "蛇大开口じゃだっこう",
    "mangaPanini": null,
    "name": "Abertura Bucal da Cobra Grande",
    "portugues": "Abertura Bucal da Cobra Grande",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Jyadakkō",
    "tvBrasileira": null,
  },
  Object {
    "description": "A Abertura dos Cinco Elementos é uma técnica de contrapartida direta do Selo dos Cinco Elementos.",
    "games": null,
    "handSeals": null,
    "id": 6,
    "kanji": "五行解印ごぎょうかいん",
    "mangaPanini": null,
    "name": "Abertura dos Cinco Elementos",
    "portugues": "Abertura dos Cinco Elementos",
    "range": "Curto alcance",
    "rank": "Rank A",
    "romaji": "Gogyō Kaiin",
    "tvBrasileira": "Liberar Selamento de Cinco Elementos",
  },
  Object {
    "description": "Obito usa o Kamui para enviar o oponente até a sua dimensão e então manipula os blocos presentes no local, criando uma formação deles. Com isso, ele abaixa o dedo verticalmente para baixo, fazendo com que todos os blocos caiem em direção ao adversário e os esmaguem.",
    "games": "Criação do Mundo",
    "handSeals": null,
    "id": 7,
    "kanji": "天地開閉",
    "mangaPanini": null,
    "name": "Abertura e Encerramento do Universo",
    "portugues": "Abertura e Encerramento do Céu e da Terra",
    "range": null,
    "rank": null,
    "romaji": "Tenchi Kaihei",
    "tvBrasileira": null,
  },
  Object {
    "description": "Matatabi, ou Yugito completamente transformada, salta no ar – de forma a ficar com a cabeça para baixo –, expele um fluxo de fogo em seu oponente e pousa entre as chamas, incinerando e esmagando tudo ao alcance delas.",
    "games": "Salto do Sopro de Chama",
    "handSeals": null,
    "id": 8,
    "kanji": "躍炎吹踏",
    "mangaPanini": null,
    "name": "Abertura em Chamas Sopradas",
    "portugues": "Abertura em Chamas Sopradas",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Yakuen Suitō",
    "tvBrasileira": null,
  },
  Object {
    "description": "Esta é a técnica final do Templo do Fogo ensinado apenas aos seus monges ninjas, e requer o Dom do Grupo Eremita para ser utilizada.",
    "games": null,
    "handSeals": null,
    "id": 9,
    "kanji": "来迎・千手殺らいごう・せんじゅさつ",
    "mangaPanini": null,
    "name": "Abordagem Acolhedora: Mil Braços Assassinos",
    "portugues": "Abordagem Acolhedora: Mil Braços Assassinos",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Raigō: Senjusatsu",
    "tvBrasileira": "Raigô: Golpe de Mil Braços",
  },
  Object {
    "description": "Em sua forma de inseto, Taisa se cobre de eletricidade e ataca o oponente.",
    "games": null,
    "handSeals": null,
    "id": 10,
    "kanji": null,
    "mangaPanini": null,
    "name": "Abordagem de Relâmpago",
    "portugues": null,
    "range": "Curto alcance",
    "rank": null,
    "romaji": null,
    "tvBrasileira": null,
  },
  Object {
    "description": "O usuário soca seu oponente, e em seguida, como uma de suas artimanhas, ele o abraça. O abraço é forte o suficiente para fraturar as costas de seu oponente.",
    "games": "Abraço Apaixonante da Juventude",
    "handSeals": null,
    "id": 11,
    "kanji": "青春の熱き抱擁せいしゅんのあつきほうよう",
    "mangaPanini": null,
    "name": "Abraço Ardente da Juventude",
    "portugues": "Abraço Ardente da Juventude",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Seishun no Atsuki Hōyō",
    "tvBrasileira": null,
  },
  Object {
    "description": "Uma barreira especial que subjuga o inimigo, empurrando-o para baixo e rapidamente drenando seu chakra. É muito difícil resistir a ela, mas Naruto Uzumaki conseguiu desfazê-la usando o chakra de Kurama.",
    "games": null,
    "handSeals": null,
    "id": 12,
    "kanji": "無限抱擁むげんほうよう",
    "mangaPanini": null,
    "name": "Abraço Infinito",
    "portugues": "Infinito Abraço",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Mugen Hōyō",
    "tvBrasileira": "Mugenhōyō",
  },
  Object {
    "description": "Ao manipular Karasu, Kankurō aperta sua mão ligada a fios de chakra fazendo com que a marionete abrace o oponente e restrinja seus movimentos. Em seguida ele pode esmagar o seu tronco, quebrando assim seus ossos.",
    "games": null,
    "handSeals": null,
    "id": 13,
    "kanji": null,
    "mangaPanini": null,
    "name": "Abraço da Marionete",
    "portugues": null,
    "range": null,
    "rank": null,
    "romaji": null,
    "tvBrasileira": null,
  },
  Object {
    "description": "B manifesta duas caudas do Gyūki e as usa para segurar o oponente, avançando em direção ao inimigo e socando-o, com a mão também transformada na besta, libertando-o da prisão feita com os tentáculos pouco antes de acertá-lo.",
    "games": "Abraço do Polvo",
    "handSeals": null,
    "id": 14,
    "kanji": "億怒端数破愚",
    "mangaPanini": null,
    "name": "Abraço do Polvo",
    "portugues": "Cem Milhões, Irritado, Fração, Rasgando a Insensatez",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Okutopasu Hagu",
    "tvBrasileira": null,
  },
  Object {
    "description": "Trata-se de uma habilidade inata manifestada por alguns membros do clã Ōtsutsuki, que lhes permite absorver chakra.",
    "games": null,
    "handSeals": null,
    "id": 15,
    "kanji": null,
    "mangaPanini": null,
    "name": "Absorção de Todas as Coisas",
    "portugues": null,
    "range": "Curto alcance",
    "rank": null,
    "romaji": null,
    "tvBrasileira": null,
  },
]
`;

exports[`should get ninjas from a jutsu 1`] = `
Array [
  Object {
    "academyGradAge": "10",
    "birthdate": "29 de fevereiro",
    "bloodType": "AB",
    "chuninPromAge": null,
    "id": 482,
    "name": "Kabuto Yakushi",
    "ninjaRegistration": "012140",
    "sex": "Masculino",
    "specie": "Humano",
    "status": null,
  },
]
`;

exports[`should paginate jutsus 1`] = `
Array [
  Object {
    "description": "Hashirama, Tobirama e Hiruzen usam uma combinação de madeira, fogo e água para empurrar o oponente. Hashirama usa sua Técnica Secreta da Liberação de Madeira: Natividade de um Mundo de Árvores para criar uma grande floresta em que Tobirama e Hiruzen atacam o oponente usando uma combinação de fogo e água. Os três Hokage então atacam o oponente, após Hashirama usar o Punho Adamantino, Tobirama chuta o oponente e Hiruzen invoca Enma que então ataca o oponente com o bastão adamantino. A força do ataque é tanta que cria uma explosão gigante na floresta no processo da conclusão da técnica.",
    "games": null,
    "handSeals": null,
    "id": 2,
    "kanji": "受け継がれる火の意志うけつがれるひのいし",
    "mangaPanini": null,
    "name": "A Herança da Vontade do Fogo",
    "portugues": "A Herança da Vontade do Fogo",
    "range": "Curto a Médio alcance",
    "rank": null,
    "romaji": "Uketsugareru Hi no Ishi",
    "tvBrasileira": null,
  },
  Object {
    "description": "Tenten invoca uma ferramenta do tamanho de seu oponente para atacá-lo.",
    "games": "Queda Dupla da Haste de Ouro",
    "handSeals": null,
    "id": 3,
    "kanji": "双金棒打ち落とし",
    "mangaPanini": null,
    "name": "Abate Duplo das Varetas de Metal",
    "portugues": "Abate Duplo das Varetas de Metal",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Sōkanabō Uchiotoshi",
    "tvBrasileira": null,
  },
  Object {
    "description": "Obito demarca a área de ataque com suas Esferas da Busca da Verdade, então ele cria várias lanças que o perfuram e em seguida ele cria uma erupção de energia que joga seu oponente para o alto.",
    "games": null,
    "handSeals": null,
    "id": 4,
    "kanji": "穿蜂",
    "mangaPanini": null,
    "name": "Abelha Perfurante",
    "portugues": "Abelha Perfurante",
    "range": "Curto a Médio alcance",
    "rank": null,
    "romaji": "Ugachibachi",
    "tvBrasileira": null,
  },
  Object {
    "description": "Depois de ser invocado por Orochimaru, Manda desliza em direção ao oponente, em seguida, submerge e atravessa-o.",
    "games": "Gongo da Boca do Mau",
    "handSeals": null,
    "id": 5,
    "kanji": "蛇大开口じゃだっこう",
    "mangaPanini": null,
    "name": "Abertura Bucal da Cobra Grande",
    "portugues": "Abertura Bucal da Cobra Grande",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Jyadakkō",
    "tvBrasileira": null,
  },
  Object {
    "description": "A Abertura dos Cinco Elementos é uma técnica de contrapartida direta do Selo dos Cinco Elementos.",
    "games": null,
    "handSeals": null,
    "id": 6,
    "kanji": "五行解印ごぎょうかいん",
    "mangaPanini": null,
    "name": "Abertura dos Cinco Elementos",
    "portugues": "Abertura dos Cinco Elementos",
    "range": "Curto alcance",
    "rank": "Rank A",
    "romaji": "Gogyō Kaiin",
    "tvBrasileira": "Liberar Selamento de Cinco Elementos",
  },
  Object {
    "description": "Obito usa o Kamui para enviar o oponente até a sua dimensão e então manipula os blocos presentes no local, criando uma formação deles. Com isso, ele abaixa o dedo verticalmente para baixo, fazendo com que todos os blocos caiem em direção ao adversário e os esmaguem.",
    "games": "Criação do Mundo",
    "handSeals": null,
    "id": 7,
    "kanji": "天地開閉",
    "mangaPanini": null,
    "name": "Abertura e Encerramento do Universo",
    "portugues": "Abertura e Encerramento do Céu e da Terra",
    "range": null,
    "rank": null,
    "romaji": "Tenchi Kaihei",
    "tvBrasileira": null,
  },
  Object {
    "description": "Matatabi, ou Yugito completamente transformada, salta no ar – de forma a ficar com a cabeça para baixo –, expele um fluxo de fogo em seu oponente e pousa entre as chamas, incinerando e esmagando tudo ao alcance delas.",
    "games": "Salto do Sopro de Chama",
    "handSeals": null,
    "id": 8,
    "kanji": "躍炎吹踏",
    "mangaPanini": null,
    "name": "Abertura em Chamas Sopradas",
    "portugues": "Abertura em Chamas Sopradas",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Yakuen Suitō",
    "tvBrasileira": null,
  },
  Object {
    "description": "Esta é a técnica final do Templo do Fogo ensinado apenas aos seus monges ninjas, e requer o Dom do Grupo Eremita para ser utilizada.",
    "games": null,
    "handSeals": null,
    "id": 9,
    "kanji": "来迎・千手殺らいごう・せんじゅさつ",
    "mangaPanini": null,
    "name": "Abordagem Acolhedora: Mil Braços Assassinos",
    "portugues": "Abordagem Acolhedora: Mil Braços Assassinos",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Raigō: Senjusatsu",
    "tvBrasileira": "Raigô: Golpe de Mil Braços",
  },
  Object {
    "description": "Em sua forma de inseto, Taisa se cobre de eletricidade e ataca o oponente.",
    "games": null,
    "handSeals": null,
    "id": 10,
    "kanji": null,
    "mangaPanini": null,
    "name": "Abordagem de Relâmpago",
    "portugues": null,
    "range": "Curto alcance",
    "rank": null,
    "romaji": null,
    "tvBrasileira": null,
  },
  Object {
    "description": "O usuário soca seu oponente, e em seguida, como uma de suas artimanhas, ele o abraça. O abraço é forte o suficiente para fraturar as costas de seu oponente.",
    "games": "Abraço Apaixonante da Juventude",
    "handSeals": null,
    "id": 11,
    "kanji": "青春の熱き抱擁せいしゅんのあつきほうよう",
    "mangaPanini": null,
    "name": "Abraço Ardente da Juventude",
    "portugues": "Abraço Ardente da Juventude",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Seishun no Atsuki Hōyō",
    "tvBrasileira": null,
  },
  Object {
    "description": "Uma barreira especial que subjuga o inimigo, empurrando-o para baixo e rapidamente drenando seu chakra. É muito difícil resistir a ela, mas Naruto Uzumaki conseguiu desfazê-la usando o chakra de Kurama.",
    "games": null,
    "handSeals": null,
    "id": 12,
    "kanji": "無限抱擁むげんほうよう",
    "mangaPanini": null,
    "name": "Abraço Infinito",
    "portugues": "Infinito Abraço",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Mugen Hōyō",
    "tvBrasileira": "Mugenhōyō",
  },
  Object {
    "description": "Ao manipular Karasu, Kankurō aperta sua mão ligada a fios de chakra fazendo com que a marionete abrace o oponente e restrinja seus movimentos. Em seguida ele pode esmagar o seu tronco, quebrando assim seus ossos.",
    "games": null,
    "handSeals": null,
    "id": 13,
    "kanji": null,
    "mangaPanini": null,
    "name": "Abraço da Marionete",
    "portugues": null,
    "range": null,
    "rank": null,
    "romaji": null,
    "tvBrasileira": null,
  },
  Object {
    "description": "B manifesta duas caudas do Gyūki e as usa para segurar o oponente, avançando em direção ao inimigo e socando-o, com a mão também transformada na besta, libertando-o da prisão feita com os tentáculos pouco antes de acertá-lo.",
    "games": "Abraço do Polvo",
    "handSeals": null,
    "id": 14,
    "kanji": "億怒端数破愚",
    "mangaPanini": null,
    "name": "Abraço do Polvo",
    "portugues": "Cem Milhões, Irritado, Fração, Rasgando a Insensatez",
    "range": "Curto alcance",
    "rank": null,
    "romaji": "Okutopasu Hagu",
    "tvBrasileira": null,
  },
  Object {
    "description": "Trata-se de uma habilidade inata manifestada por alguns membros do clã Ōtsutsuki, que lhes permite absorver chakra.",
    "games": null,
    "handSeals": null,
    "id": 15,
    "kanji": null,
    "mangaPanini": null,
    "name": "Absorção de Todas as Coisas",
    "portugues": null,
    "range": "Curto alcance",
    "rank": null,
    "romaji": null,
    "tvBrasileira": null,
  },
  Object {
    "description": "O usuário libera o chakra do Oitavo Portão e aumenta a sua velocidade em várias vezes, permitindo uma rápida sequência de golpes. A velocidade alcançada é tão alta que o usuário enxerga o tempo em câmera lenta.",
    "games": "Fluxo",
    "handSeals": null,
    "id": 16,
    "kanji": "加速",
    "mangaPanini": null,
    "name": "Aceleração",
    "portugues": "Aceleração",
    "range": null,
    "rank": null,
    "romaji": "Kasoku",
    "tvBrasileira": null,
  },
]
`;
